--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,30 @@
-discord.py[voice]>=1.2.5
-flake8
+aiohttp==3.5.4
+async-timeout==3.0.1
+atomicwrites==1.3.0
+attrs==19.3.0
+beautifulsoup4==4.8.2
+certifi==2019.11.28
+chardet==3.0.4
+colorama==0.4.3
+discord.py==1.2.5
+idna==2.8
+importlib-metadata==1.4.0
+more-itertools==8.1.0
+multidict==4.7.4
+packaging==20.0
+Pillow==6.1.0
+pipenv==2018.11.26
+pluggy==0.13.1
+py==1.8.1
+pyparsing==2.4.6
+pytest==5.3.2
+requests==2.22.0
+six==1.14.0
+soupsieve==1.9.5
+urllib3==1.25.7
+virtualenv==16.7.9
+virtualenv-clone==0.5.3
+wcwidth==0.1.8
+websockets==6.0
+yarl==1.4.2
+zipp==1.0.0
